Fix video on ios

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -838,7 +838,7 @@
 .bubble-small {
   border-radius: 10px;
   max-width: 60vw;
-  border: 1px solid $c-black20;
+  border: 1px solid $c-black10;
 
   @media (max-width: $screen-mobile) {
   max-width: 80vw;
